# BIRL

./: README.md  SECURITY.md  pyproject.toml
birl/: __init__.py  __main__.py  cli.py  compiler.py  context.py  core.py  edges.py  forge.py  graph.py  harness.py  residue.py  runtime.py
birl/contexts/: __init__.py  elf.py  pe.py  png.py  utf8.py  x86.py  zip.py
birl/contexts/production/: __init__.py  elf_production.py  pe_production.py  png_production.py  x86_production.py  zip_production.py
tests/: test_forge.py  test_phase1.py  test_phase2.py  test_phase3.py  test_production.py  xored
