[project]
name = "birl"
version = "1.1.0"
description = "Byte Interpretation Rewriting Language"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Chris Aziz", email = "chris@bombadil.systems"}]

dependencies = [
    "networkx>=3.0",
    "pefile>=2023.2.7",
    "capstone>=5.0",
    "kaitaistruct>=0.10",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
birl = "birl.cli:main"
birl-harness = "birl.harness:main"

[project.urls]
Homepage = "https://github.com/bombadilsystems/birl"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["birl*"]
